k8s/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
